@@ -23,6 +23,7 @@ WriteMakefile(
 		'ExtUtils::MakeMaker' => 6.64,	# Minimum version for TEST_REQUIRES
 		'Log::Log4perl' => 0,
 		'Params::Get' => 0.04,
+		'Readonly::Values::Syslog' => 0.02,
 		'Sys::Syslog' => 0,
 		'Scalar::Util'=> 0
 	},
@@ -35,13 +36,23 @@ WriteMakefile(
 		'File::Temp' => 0,
 		'YAML::XS' => 0
 	},
-	META_MERGE => {
+	dist => $dist,
+	META_MERGE => {	# https://perldoc.perl.org/CPAN::Meta::Spec
+		'meta-spec' => { version => 2 },
 		resources => {
+			homepage => 'https://metacpan.org/pod/Log::Abstraction',
 			repository => {
+				repository => 'https://github.com/nigelhorne/Log-Abstraction',
 				type => 'git',
 				url => 'git://github.com/nigelhorne/Log-Abstraction.git',
-				web => 'https://github.com/nigelhorne/Log-Abstraction',
-			},
+				web => 'https://github.com/nigelhorne/Log-Abstraction'
+			}, bugtracker => {
+				mailto => 'bug-Log-Abstraction@rt.cpan.org',
+				url => 'https://github.com/nigelhorne/Log-Abstraction/issues',
+				# web => 'https://rt.cpan.org/Public/Dist/Display.html?Name=Log-Abstraction',
+				web => 'https://github.com/nigelhorne/Log-Abstraction/issues'
+			}
 		},
-	}, dist => $dist
+	},
+	MIN_PERL_VERSION	=> '5.008'
 );
