@@ -9,7 +9,7 @@ BEGIN { use_ok('Log::Abstraction') }
 
 # Test logging to an in-memory array
 my @log_array;
-my $logger = Log::Abstraction->new({ logger => \@log_array });
+my $logger = Log::Abstraction->new({ logger => \@log_array, level => 'debug' });
 
 $logger->debug('This is a debug message');
 $logger->info('This is an info message');
@@ -30,6 +30,7 @@ is_deeply(
 # Test logging to a file
 my ($fh, $filename) = tempfile();
 $logger = Log::Abstraction->new($filename);
+$logger->level('debug');
 
 $logger->debug('File debug message');
 $logger->info('File info message');
@@ -45,7 +46,7 @@ like($log_lines[1], qr/File info message/, 'Logged correct info message to file'
 
 # As above but with the file argument
 ($fh, $filename) = tempfile();
-$logger = Log::Abstraction->new(logger => { file => $filename });
+$logger = Log::Abstraction->new(logger => { file => $filename }, level => 'debug');
 
 $logger->debug('File debug message2');
 $logger->info('File info message2');
@@ -59,9 +60,23 @@ like($log_lines[0], qr/File debug message2/, 'Logged correct debug message to fi
 like($log_lines[1], qr/INFO> /, 'Logged info message to file');
 like($log_lines[1], qr/File info message2/, 'Logged correct info message to file');
 
+# As above but by default debug and info aren't stashed
+
+($fh, $filename) = tempfile();
+$logger = Log::Abstraction->new({ logger => { file => $filename } });
+
+$logger->debug('File debug message2');
+$logger->info('File info message2');
+
+open $log_fh, '<', $filename or die "Could not open log file: $!";
+@log_lines = <$log_fh>;
+close $log_fh;
+
+ok(!defined($log_lines[0]));
+
 # Test logging to a file descriptor
 ($fh, $filename) = tempfile();
-$logger = Log::Abstraction->new({ fd => $fh });
+$logger = Log::Abstraction->new({ fd => $fh, level => 'debug' });
 
 $logger->debug('File debug message');
 $logger->info('File info message');
@@ -78,7 +93,7 @@ like($log_lines[1], qr/File info message/, 'Logged correct info message to file 
 
 # Test logging to a code reference
 my @code_log;
-$logger = Log::Abstraction->new(logger => sub { push @code_log, @_ });
+$logger = Log::Abstraction->new(logger => sub { push @code_log, @_ }, level => 'debug');
 
 $logger->debug('Code debug message');
 $logger->info('Code info message');
@@ -90,13 +105,13 @@ is_deeply(
 		{
 			class => 'Log::Abstraction',
 			file => 't/30-basics.t',
-			line => 83,	# Adjust line number if needed
+			line => 98,	# Adjust line number if needed
 			level => 'debug',
 			message => ['Code debug message']
 		}, {
 			class => 'Log::Abstraction',
 			file => 't/30-basics.t',
-			line => 84,	# Adjust line number if needed
+			line => 99,	# Adjust line number if needed
 			level => 'info',
 			message => ['Code info message']
 		}
@@ -119,7 +134,7 @@ if($^O ne 'haiku') {
 
 # Test logging an array
 @log_array = ();
-$logger = Log::Abstraction->new({ logger => \@log_array });
+$logger = Log::Abstraction->new({ logger => \@log_array, level => 'debug' });
 $logger->debug('This ', 'is ', 'a ', 'list');
 $logger->warn('This ', 'is ', 'another ', 'list');
 $logger->warn(warning => ['This ', 'is ', 'a ', 'ref ', 'to ', 'a ', 'list']);
